# back

./: .gitignore  README.md
agent-service/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  start-studio.ps1  start.ps1
agent-service/app/: config.py  graph.py  interview_agent.py  llm_client.py  main.py  observability.py  schemas.py  state.py  studio_graph.py  tools.py
agent-service/benchmarks/: README.md  concurrency_benchmark.py  mock_openai_server.py  sync_stream_server.py
agent-service/benchmarks/results/: before-sync.json
back/: .env.example  pom.xml
back/sql/: resume_draft.sql  schema.sql  user_profile.sql
back/src/main/java/com/interview/back/: BackApplication.java
back/src/main/java/com/interview/back/client/: AiClient.java  PythonAgentClient.java
back/src/main/java/com/interview/back/common/: Result.java
back/src/main/java/com/interview/back/config/: AdminInterceptor.java  AiProviderConfig.java  LoginInterceptor.java  RabbitMQConfig.java  RedisConfig.java  RedisRateLimiter.java  RefreshTokenInterceptor.java  ThreadPoolConfig.java  WebConfig.java
back/src/main/java/com/interview/back/controller/: AgentInternalController.java  InterviewController.java  UserController.java  (+4 more)
back/src/main/resources/: application.yml
docs/: agent-improvement-implementation.md  concurrency-benchmark-report.md  java-python-agent-migration.md  resume-template-stage-2-4.md
front/: package-lock.json  package.json
front/src/: App.vue  style.css
front/src/components/: AdminDashboard.vue  QuestionBank.vue  ResumeBuilder.vue  TemplateSquare.vue
(+38 files in other folders)
